// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BetInfo base 1`] = `"[object Undefined]"`;

exports[`BetInput base 1`] = `
<div
  class="default-input"
>
  <div
    class="inputWrap"
  >
    <div
      class="input"
    >
      <span
        class="betAmount amountDisabled"
      >
        0
      </span>
      <span
        class="amountSuffix"
      >
        EUR
      </span>
    </div>
    <div
      class="possibleWinWrap"
    >
      <span />
      <span>
        0 EUR
      </span>
    </div>
  </div>
  <a
    class="all-in-button"
    href="javascript:;"
  >
    <span />
  </a>
  <div>
    <a
      class="bet-button"
      href="javascript:;"
    >
      <span />
    </a>
  </div>
</div>
`;

exports[`BetModule base 1`] = `
<div
  class="default-bet-module"
>
  <div
    class="-betinfor"
  >
    <div
      class="left"
    >
      <div
        class="optionName"
      >
        <span
          class=""
        />
        <span
          class="sp"
        />
      </div>
      <div
        class="gamePlayName"
      />
      <div
        class="gameAgainst"
      />
    </div>
    <div
      class="right"
    >
      <span
        class="iconfont icon-delete"
      />
    </div>
  </div>
  <div
    class="default-input"
  >
    <div
      class="inputWrap"
    >
      <div
        class="input"
      >
        <span
          class="betAmount amountDisabled"
        >
          0
        </span>
        <span
          class="amountSuffix"
        >
          EUR
        </span>
      </div>
      <div
        class="possibleWinWrap"
      >
        <span />
        <span>
          0 EUR
        </span>
      </div>
    </div>
    <a
      class="all-in-button"
      href="javascript:;"
    >
      <span />
    </a>
    <div>
      <a
        class="bet-button"
        href="javascript:;"
      >
        <span />
      </a>
    </div>
  </div>
  <div
    class="default-keyboard"
  >
    <a
      class="btnWrap"
      href="javascript:;"
    >
      <span
        class="btn"
      >
         1
      </span>
    </a>
    <a
      class="btnWrap"
      href="javascript:;"
    >
      <span
        class="btn"
      >
         2
      </span>
    </a>
    <a
      class="btnWrap"
      href="javascript:;"
    >
      <span
        class="btn"
      >
         3
      </span>
    </a>
    <a
      class="btnWrap"
      href="javascript:;"
    >
      <span
        class="btn"
      >
         4
      </span>
    </a>
    <a
      class="btnWrap"
      href="javascript:;"
    >
      <span
        class="btn"
      >
         5
      </span>
    </a>
    <a
      class="btnWrap"
      href="javascript:;"
    >
      <span
        class="btn"
      >
         6
      </span>
    </a>
    <a
      class="btnWrap"
      href="javascript:;"
    >
      <span
        class="btn"
      >
         7
      </span>
    </a>
    <a
      class="btnWrap"
      href="javascript:;"
    >
      <span
        class="btn"
      >
         8
      </span>
    </a>
    <a
      class="btnWrap"
      href="javascript:;"
    >
      <span
        class="btn"
      >
         9
      </span>
    </a>
    <a
      class="btnWrap"
      href="javascript:;"
    >
      <span
        class="btn"
      >
         00
      </span>
    </a>
    <a
      class="btnWrap"
      href="javascript:;"
    >
      <span
        class="btn"
      >
         0
      </span>
    </a>
    <a
      class="btnWrap"
      href="javascript:;"
    >
      <span
        class="btn"
      >
         
        <span
          class="iconfont icon-jisuanqishanchu"
        />
      </span>
    </a>
  </div>
</div>
`;
